2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/33_while_cond_or.deca
// Description :
//     while avec condition : OR
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{
    while( 1==1 || 1!=2 )
    {
        
    }
}