2A/05_Projet_GL/src/test/deca/context/invalid/complet/34_aff_int_Object.deca
// Description :
//   afféctation int dans Object 
// Resultats :
//    ligne 10 :le int ne peut pas être affecté à Object
// Historique :
//  cree le 16/01/2024

{
    Object o ;
    o = 1 ; 
}